# Whirlwind

./: .gitignore  CMakeLists.txt  docker-compose.yml  dockerfile  main.cpp
src/common/: AggregateRoot.cpp  AggregateRoot.h
src/domain/league/: League.cpp  League.h
tests/: league.cpp
